--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -D dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.0.7",
@@ -23,16 +23,16 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.17.19",
-    "react-helmet-async": "^2.0.4",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.426.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.52.2",
-    "react-router-dom": "@6.21.1",
-    "shadcn-ui": "@0.8.0",
+    "react-router-dom": "6.21.1",
+    "shadcn-ui": "^0.2.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.9",
@@ -48,6 +48,7 @@
     "eslint": "^9.8.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "typescript": "^5.5.3",
