--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,9 @@ jobs:
         run: npm install
 
       - name: Build
+        env:
+          VITE_API_URL: ${{ vars.VITE_API_URL }}
+          VITE_ENABLE_API_DELAY: ${{ vars.VITE_ENABLE_API_DELAY }}
         run: npm run build
 
       - name: Setup Pages
