--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.426.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "6.21.1",
+    "react-select": "^5.8.0",
     "shadcn-ui": "^0.2.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
@@ -43,6 +46,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/lodash": "^4.17.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.10.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
